feat : exe code